<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="fill_parent"
        android:padding="0dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:id="@+id/etDialogSearch"
            android:hint="@string/search"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="#29b6f6"
            android:paddingLeft="20dp"
            android:drawableRight="@drawable/search"
            android:paddingRight="20dp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvDialogListTeachers"
            android:layout_marginTop="0dp"
            android:background="@color/colorBackground"
            android:listSelector="@color/colorHighlight"
            android:choiceMode="singleChoice" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tvTitleTeacherClasses"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lvDialogListTeacherClasses"
            android:choiceMode="singleChoice" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/classDetails"
            android:id="@+id/tvDialogClassCreateTitle"
            android:inputType="none"
            android:paddingBottom="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Edit this class"
            android:id="@+id/tvDialogClassEditTitle"
            android:inputType="none"
            android:paddingBottom="6dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/className"
            android:id="@+id/etDialogClassName"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/teacherName"
            android:id="@+id/tvDialogTeacherName"
            android:inputType="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/teacherEmail"
            android:id="@+id/tvDialogTeacherEmail"
            android:inputType="none" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:id="@+id/llDialogClassButtons"
            android:paddingTop="6dp"
            android:paddingBottom="18dp" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogAssignClass"
                android:id="@+id/bDialogCreateClass" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogAssignClass"
                android:id="@+id/bDialogModifyClass" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialogAssignClass"
                android:id="@+id/bDialogDeleteClass" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/bDialogCancel" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>