<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="-5dp"
    android:paddingBottom="-5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="-8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="251dp"
            android:layout_height="fill_parent"
            android:padding="0dp"
            android:id="@+id/menuLinear"
            android:background="#ffffff">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/add_new"
                android:id="@+id/bAddText"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="#9ccc65"
                android:paddingRight="20dp"
                android:drawableRight="@drawable/add" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:id="@+id/etSearch"
                android:hint="@string/search"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:background="#29b6f6"
                android:paddingLeft="20dp"
                android:drawableRight="@drawable/search"
                android:paddingRight="20dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvTexts"
                android:choiceMode="singleChoice" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/contentPane"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:id="@+id/TextPane">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etTextname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@null"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/text_name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/etContent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/text_content"
                    android:lines="30"
                    android:gravity="top" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:id="@+id/rightPane">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/complexity"
                        android:id="@+id/tvComplexityLabel"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/tvComplexity"
                        android:hint="0.0" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_question"
                    android:id="@+id/bAddQuestion"
                    android:layout_marginBottom="0dp"
                    android:textColor="@android:color/holo_green_dark" />

                <ListView
                    android:layout_width="fill_parent"
                    android:layout_height="363dp"
                    android:id="@+id/lvQuestions"
                    android:layout_weight="1"
                    android:layout_marginTop="0dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/bSave"
                    android:layout_weight="0"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/holo_green_dark" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_text"
                    android:id="@+id/bDelete"
                    android:layout_weight="0"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/holo_red_light" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
